minified parallax js, created dropdown text with blinking font icon indicators using jquery, edited h1s, fixed some data scrolls

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-md-12">
             <img class="logo" src="images/claremont-logo.png" alt="Claremont Men's Club Volleyball - Claremont Volleyball Logo" title="5C Claremont Men's Volleyball Club"/>
-            <h1><span>COMING </span>SOON</h1>
+            <h1><span>Warming</span> Up</h1>
           </div>
         </div>
         <div class="row">
@@ -46,67 +46,73 @@
             </div>
           </div>
         </div>
+<!--
         <div class="row">
           <a href="#about" class="button intro hvr-float" data-scroll-reveal="wait 2.25s">About</a>
         </div>
+-->
       </div>
     </header>
     <!-- End Intro -->
 
     <!-- About -->
       <section id="about" style="background: #ffffff; z-index: 999;">
-        <div class="container-fluid" data-scroll-reveal="">
+        <div class="container-fluid" data-scroll-reveal="enter from top after 0.5s">
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
               <img src="images/usa-ball.png" class="img usa-volleyball" alt="blue and red men's volleyball" title="usa colored volleyball">
-              <h2>About us</h2>
-              <p>The Claremont Men's Club Volleyball Team is a division II college club that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.</p>
-              <p>The goal of the team is to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we try to collaborate with the women's team for beach volleyball days on Friday afternoons.</p>
-              <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
+              <h2>About Us</h2>
+              <p id="about1">The Claremont Men's Club Volleyball Team is a division II college club that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players. <i class="scroll blink fa fa-chevron-circle-down"></i></p>
+              <div class="about-show">
+                  <p>The goal of the team is to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we try to collaborate with the women's team for beach volleyball days on Friday afternoons.</p>
+                  <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
+             </div>
             </div>
           </div>
             <div class="row" id="colleges">
-              <div class="college col-lg-1 col-lg-offset-3 col-md-1 col-md-offset-3 col-xs-2">
+              <div class="college col-lg-1 col-lg-offset-3 col-md-1 col-md-offset-3 col-xs-4">
                   <img src="/images/colleges/cgu.png">
               </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
+              <div class="college col-lg-1 col-md-1 col-xs-4">
                   <img src="/images/colleges/cmc.jpg">
               </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
+              <div class="college col-lg-1 col-md-1 col-xs-4">
                   <img src="/images/colleges/hmc.jpg">
               </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
+              <div class="college col-lg-1 col-md-1 col-xs-4">
                   <img src="/images/colleges/pitzer-college.gif">
               </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
+              <div class="college col-lg-1 col-md-1 col-xs-4">
                   <img src="/images/colleges/pomona.jpg">
               </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
+              <div class="college col-lg-1 col-md-1 col-xs-4">
                   <img src="/images/colleges/scripps-college.jpg">
               </div>
             </div>
           <div class="row">
-            <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.75s">
+            <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.25s">
               <img src="images/captain1.png" alt="Earl Schultz" title="Earl Schultz volleyball co-captain spikes" class="hvr-float img-responsive">
-              <h3 data-scroll-reveal="enter from top after 1.5s"><span>Earl</span> Schultz</h3>
-              <span data-scroll-reveal="enter from top after 2s">co-captain</span>
+              <h3 data-scroll-reveal="enter from top after 1.25s"><span>Earl</span> Schultz</h3>
+              <span data-scroll-reveal="enter from top after 1.5s">co-captain</span>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12">
               <img src="images/captain2.png" alt="Alex Bresler" title="Alex Bresler volleyball co-captain portrait" class="hvr-float img-responsive">
               <div>
-              <h3 data-scroll-reveal="enter from top after 1.5s"><span>Alex </span>Bresler</h3>
-              <span data-scroll-reveal="enter from top after 2s">co-captain</span>
+              <h3 data-scroll-reveal="enter from top after 1.25s"><span>Alex </span>Bresler</h3>
+              <span data-scroll-reveal="enter from top after 1.5s">co-captain</span>
               </div>
             </div>
-            <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter left and move 50px over 1.75s">
+            <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter left and move 50px over 1.25s">
               <img src="images/captain3.png" alt="Ian Thomas" title="volleyball co-captain Ian Thomas spikes volleyball" class="hvr-float img-responsive">
-              <h3 data-scroll-reveal="enter from top after 1.5s"><span>Ian</span> Thomas</h3>
-              <span data-scroll-reveal="enter from top after 2s">co-captain</span>
+              <h3 data-scroll-reveal="enter from top after 1.25s"><span>Ian</span> Thomas</h3>
+              <span data-scroll-reveal="enter from top after 1.5s">co-captain</span>
             </div>
           </div>
+<!--
           <div class="row">
             <a href="#contact" class="button hvr-float" data-scroll-reveal="wait 2.5s">Contact</a>
           </div>
+-->
         </div>
       </section>
       <!-- End About -->
@@ -122,7 +128,7 @@
           </div>
         </div>
         <form action="https://formspree.io/info@claremontvolleyball.com" method="POST">
-            <div class="row" data-scroll-reveal="enter from top after 1s">
+            <div class="row" data-scroll-reveal="enter from top after 0.25s">
               <div class="col-md-3 col-md-offset-3 col-xs-12">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control input-lg" id="inputName" placeholder="Name" onkeydown="Javascript:checkName();">
@@ -134,14 +140,14 @@
                 </div>
               </div>
             </div>
-            <div class="row" data-scroll-reveal="enter from top after 1.25s">
+            <div class="row" data-scroll-reveal="enter from top after 0.35s">
                 <div class="col-md-6 col-md-offset-3 col-xs-12">
                     <div class="form-group">
                         <input type="text" name="_subject" class="form-control input-lg" placeholder="Subject">
                     </div>
                 </div>
             </div>
-            <div class="row" data-scroll-reveal="enter from top after 1.25s">
+            <div class="row" data-scroll-reveal="enter from top after 0.45s">
               <div class="col-md-6 col-md-offset-3 col-xs-12">
                 <div class="form-group">
                   <textarea name="message" class="form-control input-lg" id="inputMessage" rows="3" placeholder="Message"></textarea>
@@ -149,14 +155,10 @@
                 <!--  hidden -->
                 <input type="text" name="_gotcha" style="display:none" />
                 <input type="hidden" name="_next" value="/contact" />
-                <button type="submit" class="button hvr-float submit" data-scroll-reveal="enter from top after 1.5s">Submit</button>
+                <button type="submit" class="button hvr-float submit" data-scroll-reveal="enter from top after 0.5s">Submit</button>
               </div>
             </div>
         </form>
-        <div class="row">
-          <div class="mail-response">&nbsp;</div>
-          <div class="back-to-top"><a href="#intro" class="button">Back to top</a></div>
-        </div>
       </div>
     </section>
     <!-- End Contact -->
