--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </div>
             </div>
           <div class="row">
-            <h1 class="captain-head">2016-2017 Captains</h1>
+            <h1 class="captain-head"><span>2016-2017</span> Captains</h1>
             <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.25s">
               <img src="images/captain1.png" alt="Earl Schultz" title="Earl Schultz volleyball co-captain spikes" class="hvr-float img-responsive">
               <h3 data-scroll-reveal="enter from top after 1.25s"><span>Earl</span> Schultz</h3>
