changed some about paragraph css and edited some of the text to make it more accurate

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <div class="col-md-12">
             <img class="logo" src="images/claremont-logo.png" alt="Claremont Men's Club Volleyball - Claremont Volleyball Logo" title="5C Claremont Men's Volleyball Club"/>
             <h1><span>Warming</span> Up</h1>
+            <h1 class="smol-text">in</h1>
           </div>
         </div>
         <div class="row">
@@ -62,10 +63,13 @@
             <div class="col-md-6 col-md-offset-3">
               <img src="images/usa-ball.png" class="img usa-volleyball" alt="blue and red men's volleyball" title="usa colored volleyball">
               <h2>About Us</h2>
-              <p id="about1">The Claremont Men's Club Volleyball Team is a division II college club that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players. <i class="scroll blink fa fa-chevron-circle-down"></i></p>
-              <div class="about-show">
-                  <p>The goal of the team is to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we try to collaborate with the women's team for beach volleyball days on Friday afternoons.</p>
-                  <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
+              <div class="about-border about-hover">
+                  <p id="about1" class="">The Claremont Men's Club Volleyball Team is a Division II college club that competes in regional and national tournaments. We were the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) in 2015 and the runner-ups in 2016. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players. <i class="scroll blink fa fa-chevron-circle-down"></i></p>
+                  <div class="about-show">
+                      <p>We aim to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we play beach volleyball with the women's team on Friday afternoons.</p>
+                      <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
+                  </div>
+             </div>
              </div>
             </div>
           </div>
