--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Claremont Colleges Club Volleyball Team is a DII organization competing for championships locally and nationally">
-    <meta name="keywords" content="volleyball, club, competitive, men, claremont, calremont, division II, college, claremont mckenna, harvey mudd, pomona, pitzer, championship">
+    <meta name="description" content="The Claremont Colleges Volleyball Club Team is a DII organization competing for championships locally and nationally">
+    <meta name="keywords" content="volleyball, club, competitive, men, claremont, calremont, division II, college, claremont mckenna, harvey mudd, pomona, pitzer, championship, claremont mudd scripps, pomona pitzer">
     <title>Claremont Colleges Club Volleyball - Home</title>
 
     {% include head.html %}
@@ -64,7 +64,7 @@
               <img src="images/usa-ball.png" class="img usa-volleyball" alt="blue and red men's volleyball" title="usa colored volleyball">
               <h2>About Us</h2>
               <div class="about-border about-hover">
-                  <p id="about1" class="">The Claremont Men's Club Volleyball Team is a Division II college club that competes in regional and national tournaments. We were the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) in 2015 and the runner-ups in 2016. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players. <i class="scroll blink fa fa-chevron-circle-down"></i></p>
+                  <p id="about1" class="">The Claremont Men's Volleyball Club Team is a Division II college club that competes in regional and national tournaments. We were the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) in 2015 and the runner-ups in 2016. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players. <i class="scroll blink fa fa-chevron-circle-down"></i></p>
                   <div class="about-show">
                       <p>We aim to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we play beach volleyball with the women's team on Friday afternoons.</p>
                       <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
@@ -73,42 +73,50 @@
              </div>
             </div>
           </div>
+          <div class="row">
+                <div class="college col-lg-2 col-lg-offset-4 col-md-2 col-md-offset-4 col-xs-6">
+                    <a href="http://www.cmsathletics.org/"><img src="/images/colleges/cms.png"></a>
+                </div>
+                <div class="college col-lg-2 col-md-2 col-xs-6">
+                    <a href="http://www.pe.pomona.edu/landing/index"><img src="/images/colleges/pomona-pitzer.png"></a>
+                </div>
+            </div>
             <div class="row" id="colleges">
               <div class="college col-lg-1 col-lg-offset-3 col-md-1 col-md-offset-3 col-xs-4">
-                  <img src="/images/colleges/cgu.png">
+                  <a href="http://www.cgu.edu/pages/1.asp"><img src="/images/colleges/cgu.png" alt="claremont graduate university volleyball"></a>
               </div>
               <div class="college col-lg-1 col-md-1 col-xs-4">
-                  <img src="/images/colleges/cmc.jpg">
+                  <a href="http://cmc.edu"><img src="/images/colleges/cmc.jpg" alt="claremont mckenna college volleyball"></a>
               </div>
               <div class="college col-lg-1 col-md-1 col-xs-4">
-                  <img src="/images/colleges/hmc.jpg">
+                  <a href="https://www.hmc.edu/"><img src="/images/colleges/hmc.jpg" alt="harvey mudd college volleyball"></a>
               </div>
               <div class="college col-lg-1 col-md-1 col-xs-4">
-                  <img src="/images/colleges/pitzer-college.gif">
+                  <a href="http://www.pitzer.edu/"><img src="/images/colleges/pitzer-college.gif" alt="pitzer college volleyball"></a>
               </div>
               <div class="college col-lg-1 col-md-1 col-xs-4">
-                  <img src="/images/colleges/pomona.jpg">
+                  <a href="https://www.pomona.edu/"><img src="/images/colleges/pomona.jpg" alt="pomona college volleyball"></a>
               </div>
               <div class="college col-lg-1 col-md-1 col-xs-4">
-                  <img src="/images/colleges/scripps-college.jpg">
+                  <a href="http://www.scrippscollege.edu/"><img src="/images/colleges/scripps-college.jpg" alt="scripps college volleyball"></a>
               </div>
             </div>
           <div class="row">
             <h1 class="captain-head"><span>2016-2017</span> Captains</h1>
             <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.25s">
-              <img src="images/captain1.png" alt="Earl Schultz" title="Earl Schultz volleyball co-captain spikes" class="hvr-float img-responsive">
+              <img src="images/captain1.png" alt="Earl Schultz volleyball co-captain spikes from Pitzer College" title="Earl Schultz volleyball co-captain spikes from Pitzer College" class="hvr-float img-responsive">
               <h3 data-scroll-reveal="enter from top after 1.25s"><span>Earl</span> Schultz</h3>
               <span data-scroll-reveal="enter from top after 1.5s">co-captain</span>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12">
-              <img src="images/captain2.png" alt="Alex Bresler" title="Alex Bresler volleyball co-captain portrait" class="hvr-float img-responsive">
+              <img src="images/captain2.png" alt="Alex Bresler from Pomona College" title="Alex Bresler volleyball co-captain portrait from Pomona College" class="hvr-float img-responsive">
               <div>
               <h3 data-scroll-reveal="enter from top after 1.25s"><span>Alex </span>Bresler</h3>
               <span data-scroll-reveal="enter from top after 1.5s">co-captain</span>
               </div>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter left and move 50px over 1.25s">
-              <img src="images/captain3.png" alt="Ian Thomas" title="volleyball co-captain Ian Thomas spikes volleyball" class="hvr-float img-responsive">
+              <img src="images/captain3.png" alt="Ian Thomas spikes from Pomona College" title="volleyball co-captain Ian Thomas spikes volleyball" class="hvr-float img-responsive">
               <h3 data-scroll-reveal="enter from top after 1.25s"><span>Ian</span> Thomas</h3>
               <span data-scroll-reveal="enter from top after 1.5s">co-captain</span>
             </div>
@@ -127,7 +135,7 @@
       <div class="container-fluid">
         <div class="row" data-scroll-reveal="">
           <div class="col-md-6 col-md-offset-3">
-            <img src="/images/kangaroo-pass.png" alt="kangaroo passing volleyball" title="A Kangaroo Passing" class="img kangaroo-pass">
+            <img src="/images/kangaroo-pass.png" alt="claremont kangaroo passing volleyball" title="A Kangaroo Passing" class="img kangaroo-pass">
             <h2>Contact</h2>
             <p>If you have any more questions about our season, the team, or how to join, please don't hesitate to check out our page or email us directly. We would love for you to join us on our march to a national championship!</p>
           </div>
