added 2016-2017 roster updates and gallery page

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ layout: default
                 </div>
                 <!--  hidden -->
                 <input type="text" name="_gotcha" style="display:none" />
-                <input type="hidden" name="_next" value="/contact" />
+                <input type="hidden" name="_next" value="/contact/success" />
                 <button type="submit" class="button hvr-float submit" data-scroll-reveal="enter from top after 0.5s">Submit</button>
               </div>
             </div>
